http://bugzilla.gnome.org/show_bug.cgi?id=83334 do it the easy way and

2002-08-10  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=83334
	* eggcellrendererkeys.c : do it the easy way and just update the
	  libegg code.